Fix jumping in DBoard + added wave border input

--- a/app/less/_create_initial_section.less
+++ b/app/less/_create_initial_section.less
@@ -18,13 +18,6 @@
           transform: scale(1);
           color: @iConnect-orange;
         }
-
-        input {
-          background-color: transparent;
-          box-shadow: none;
-          outline: none;
-          border-bottom: 1px solid @iConnect-orange !important;
-        }
       }
     }
 
@@ -62,6 +55,36 @@
       border-radius: 0;
       border-bottom: 1px solid transparent !important;
     }
+
+    .bar {
+      position: relative;
+      display: block;
+      width: 100%;
+
+      &:before, &:after {
+        content: '';
+        height: 1px;
+        width: 0;
+        bottom: 1px;
+        position: absolute;
+        background: @iConnect-orange;
+        transition: 0.2s ease all;
+        -moz-transition: 0.2s ease all;
+        -webkit-transition: 0.2s ease all;
+      }
+      &:before {
+        left: 50%;
+      }
+      &:after {
+        right: 50%;
+      }
+    }
+
+    /* active state */
+    input:focus ~ .bar:before, input:focus ~ .bar:after {
+      width:50%;
+    }
+
   }
 
   .create-form {
